--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  go_router: ^14.2.1
   flutter_native_splash: ^2.4.0
 
 dev_dependencies:
