--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   go_router: ^14.2.1
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
   flutter_native_splash: ^2.4.0
 
 dev_dependencies:
