--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   go_router: ^14.2.1
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  intl: ^0.19.0
   flutter_native_splash: ^2.4.0
 
 dev_dependencies:
