--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   intl: ^0.19.0
+  stripe_checkout: ^1.0.2
   flutter_native_splash: ^2.4.0
 
 dev_dependencies:
